After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789678 - [GtkAboutDialog] GTK_LICENSE_AGPL_3_0 does not work
[GtkAboutDialog] GTK_LICENSE_AGPL_3_0 does not work
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-10-31 01:27 UTC by Julian Sparber
Modified: 2017-10-31 18:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add GTK_LICENSE_AGPL_3_0 to enum range in gtk_about_dialog_set_license_type (921 bytes, patch)
2017-10-31 01:33 UTC, Julian Sparber
committed Details | Review

Description Julian Sparber 2017-10-31 01:27:03 UTC
When setting the license to GTK_LICENSE_AGPL_3_0 for a GtkAboutDialog we get an error. 

Gtk-CRITICAL gtk_about_dialog_set_license_type: assertion 'license_type >= GTK_LICENSE_UNKNOWN && license_type <= GTK_LICENSE_LGPL_3_0_ONLY' failed


The problem is that in gtk_about_dialog_set_license_type we check if the set value is between GTK_LICENSE_UNKNOWN and GTK_LICENSE_LGPL_3_0_ONLY but since (https://bugzilla.gnome.org/show_bug.cgi?id=763850) GTK_LICENSE_LGPL_3_0_ONLY isn't anymore the last one in enum.

I added a patch which replaces GTK_LICENSE_LGPL_3_0_ONLY with GTK_LICENSE_AGPL_3_0

Maybe we should check if the value is between 0 and N_GTK_LICENSE or something like that?
Comment 1 Julian Sparber 2017-10-31 01:33:12 UTC
Created attachment 362593 [details] [review]
Add GTK_LICENSE_AGPL_3_0 to enum range in gtk_about_dialog_set_license_type
Comment 2 Matthias Clasen 2017-10-31 02:24:34 UTC
Review of attachment 362593 [details] [review]:

sure